new pdf resumes added. Added LTIA to experience list.

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     </ul>
                     <ul class="months pt-br">
                       <li>Março 2017</li>
-                      <li class="end-section-3l">Fevereiro 2019</li>
+                      <li class="end-section-3l">Fevereiro 2019 (previsto)</li>
                       <li>Março 2016</li>
                       <li class="end-section-2l">Agosto 2016</li>
                       <li>Fevereiro 2012</li>
@@ -250,7 +250,7 @@
                       </div>
                     </div>
                     <ul class="content education en-us">
-                      <li class="not-hidden-xs">March 2017 - February 2019 (previsto)</li>
+                      <li class="not-hidden-xs">March 2017 - February 2019 (expected)</li>
                       <li class="special">Federal University of São Carlos - Sorocaba-SP, Brazil</li>
                       <li>Master of Science in Computer Science</li>
                       <li>Focus on Software Engineer and UX</li>
@@ -269,7 +269,7 @@
                       <li>Brazil Scientific Mobility Program, fully funded scholarship recipient</li>
                     </ul>
                     <ul class="content education pt-br">
-                      <li class="not-hidden-xs">Março 2017 - Fevereiro 2019</li>
+                      <li class="not-hidden-xs">Março 2017 - Fevereiro 2019 (previsto)</li>
                       <li class="special">Universidade Federal de São Carlos - Sorocaba-SP</li>
                       <li>Mestrado em Ciência da Computação</li>
                       <li>Foco em Engenharia de Software e Experiência de Usuário</li>
@@ -291,7 +291,6 @@
                 </section>
                 <section>
                   <div class="resume-title">
-                    <span class="resume-icon"></span>
                     <h4 class="en-us"><span class="resume-icon"><img src="images/skills.png" alt="skills icon"/></span>Skills</h4>
                     <h4 class="pt-br"><span class="resume-icon"><img src="images/skills.png" alt="skills icon"/></span>Habilidades</h4>
                     <div class="resume-section-content">
@@ -304,12 +303,13 @@
                 </section>
                 <section>
                   <div class="resume-title">
-                    <span class="resume-icon"></span>
                     <h4 class="en-us"><span class="resume-icon"><img src="images/experience.png" alt="experience icon"/></span>Experience</h4>
                     <h4 class="pt-br"><span class="resume-icon"><img src="images/experience.png" alt="experience icon"/></span>Experiência</h4>
                   </div>
                   <div class="resume-section-content">
                     <ul class="months en-us">
+                      <li>September 2016</li>
+                      <li class="end-section-2l">July 2017</li>
                       <li>March 2016</li>
                       <li class="end-section-2l">July 2016</li>
                       <li>August 2015</li>
@@ -318,6 +318,8 @@
                       <li>November 2014</li>
                     </ul>
                     <ul class="months pt-br">
+                      <li>Setembro 2016</li>
+                      <li class="end-section-2l">Julho 2017</li>
                       <li>Março 2016</li>
                       <li class="end-section-2l">Julho 2016</li>
                       <li>Agosto 2015</li>
@@ -327,10 +329,17 @@
                     </ul>
                     <div class="timeline-icon-wrapper">
                       <div class="timeline-icon ti-2">
-                        <div class="little-icon only-three"></div>
+                        <div class="little-icon i1"></div>
+                        <div class="little-icon i2"></div>
+                        <div class="little-icon i3"></div>
+                        <div class="little-icon i4"></div>
                       </div>
                     </div>
                     <ul class="content en-us">
+                      <li class="not-hidden-xs">September 2016 - July 2017</li>
+                      <li class="special">LTIA - Laboratório de Tecnologia da Informação Aplicada</li>
+                      <li>Web developer</li>
+                      <li class="end-section">Technologies: HTML, Sass, jQuery, Bootstrap and CodeIgniter.</li>
                       <li class="not-hidden-xs">March 2016 - July 2016</li>
                       <li class="special">Infineon Technologies</li>
                       <li>Information Technology Internship.</li>
@@ -345,6 +354,10 @@
                       <li>Technologies: HTML, CSS/Sass, Javascript/jQuery, Bootstrap and Python/Django.</li>
                     </ul>
                     <ul class="content pt-br">
+                      <li class="not-hidden-xs">Setembro 2016 - Julho 2017</li>
+                      <li class="special">LTIA - Laboratório de Tecnologia da Informação Aplicada</li>
+                      <li>Desenvolvedora Web</li>
+                      <li class="end-section">Tecnologias: HTML, Sass, jQuery, Bootstrap e CodeIgniter.</li>
                       <li class="not-hidden-xs">Março 2016 - Julho 2016</li>
                       <li class="special">Infineon Technologies</li>
                       <li>Estágio em Tecnologia da Informação.</li>
@@ -362,7 +375,6 @@
                 </section>
                 <section>
                   <div class="resume-title">
-                    <span class="resume-icon"></span>
                     <h4 class="en-us"><span class="resume-icon"><img src="images/projects.png" alt="projects icon"/></span>Best Projects</h4>
                     <h4 class="pt-br"><span class="resume-icon"><img src="images/projects.png" alt="projects icon"/></span>Projetos</h4>
                   </div>
@@ -777,9 +789,9 @@
                   <div class="col-8 project-info hidden">
                     <div class="row">
                       <section class="col-8">
-                        <p class="en-us">This project brings together different science fields such as Biology, Physics and Chemistry in an educational website. I was contacted by a Biology study group and made this website according to their needs. They wanted a web portal to display reliable content that high school and university students could access, improve their knowledge and use as reference for future works. </p>
+                        <p class="en-us">This project brings together different science fields such as Biology, Physics and Chemistry in an educational website. While I was a web developer at <a href="https://www.facebook.com/LTIA.UNESP/" target="_blank">LTIA</a>, a Biology study group contacted the laboratory wanting this website, which was made according to their needs. They wanted a web portal to display reliable content that high school and university students could access, improve their knowledge and use as reference for future works. </p>
                         <p class="en-us">It was a challenge to develop this whole project alone. I had to talk with clients and understand what they really wanted, design the UI, develop front-end and back-end and also plan all database tables.</p>
-                        <p class="pt-br">Esse projeto junta diferentes áreas da ciência como Biologia, Física e Química em um site educacional. Um grupo de estudos na área de Biologia entrou em contato e fiz esse site de acordo com suas necessidades. Eles queriam um portal web para disponibilizar conteúdo confiável que estudantes do ensino médio ou superior poderiam acessar para aumentar seus conhecimentos e utilizar como referência para futuros trabalhos.</p>
+                        <p class="pt-br">Esse projeto junta diferentes áreas da ciência como Biologia, Física e Química em um site educacional. Quando eu participava do <a href="https://www.facebook.com/LTIA.UNESP/" target="_blank">LTIA</a> como desenvolvedora web, um grupo de estudos na área de Biologia entrou em contato com o laboratório pedindo esse website, que foi feito de acordo com suas necessidades. Eles queriam um portal web para disponibilizar conteúdo confiável que estudantes do ensino médio ou superior poderiam acessar para aumentar seus conhecimentos e utilizar como referência para futuros trabalhos.</p>
                         <p class="pt-br">Foi um desafio desenvolver esse projeto todo sozinha. Tive que conversar com os clientes e entender tudo que eles gostariam, fazer o design da UI, desenvolver o front-end e o back-end e também planejar todas as tabelas do banco de dados.</p>
                         <div class="btn-wrapper">
                           <a class="link-btn floresciencia" href="http://floresciencia.com.br" target="_blank">
