--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Giulia Cardieri</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
   <script type="application/ld+json">
   {
   "@context": "http://www.schema.org",
