--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-49632572-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-49632572-1');
+  </script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -35,8 +44,8 @@
     }
   ],
   "gender": "Female",
-  "description": "UI Developer and HCI Researcher",
-  "jobTitle": "Front-end Developer",
+  "description": "Front-end Developer",
+  "jobTitle": "Front-end Developer and UX Researcher",
   "url": "https://giuliacardieri.com",
   "image": "https://giuliacardieri.com/images/giuliaa.jpg",
   "address": {
@@ -88,7 +97,7 @@
         </section>
         <section>
           <h1 class="h1">Hey! I'm Giulia Cardieri</h1>
-          <h2 class="h2 h2--pink">A UI developer based in Brazil</h2>
+          <h2 class="h2 h2--pink">A Front-end Developer based in Brazil</h2>
         </section>
       </main>
     </section>
@@ -97,9 +106,9 @@
         <img class="image" src="images/giuliaa.jpg" alt="Giulia Cardieri">
         <div>
           <h3 class="h3">Hi!</h3>
-          <p class="p">I'm <strong>Giulia Cardieri</strong>, a <strong>UI developer and Human-Computer Interaction (HCI) Researcher</strong> located in Sorocaba, Brazil. I enjoy creating visually pleasing and accessible web applications, besides researching about how web technologies affect end-users.</p>
-          <p class="p">In 2019 I got a master's degree in Computer Science (on the HCI field) from <a class="a" href="http://www.ppgccs.net/" target="_blank">Federal University of São Carlos (UFSCar Sorocaba)</a>. I developed <strong>an approach called <a href="https://repositorio.ufscar.br/handle/ufscar/11311" class="a" target="_blank">PWA-EU</a> that assists developers to create PWAs that empower end-users</strong>. To learn more about <strong>PWA-EU</strong>, check my <a class="a" href="https://scholar.google.com.br/citations?user=y16Jo-EAAAAJ" target="_blank">publications</a>.</p>
-          <p class="p">I'm a <strong>CSS and Women in Tech enthusiast</strong>. I co-organize/speak/attend events in those fields, such as <a class="a" href="http://railsgirls.com/sorocaba" target="_blank">Rails Girls Sorocaba</a>. I believe the people who are already working with technology (yeah, that includes me and maybe you) <strong>should share their experiences and knowledge to create a more welcoming place to those who are starting</strong>, as the technology field has its challenges.</p>
+          <p class="p">I'm <strong>Giulia Cardieri</strong>, a <strong>front-end developer</strong> located in Sorocaba, Brazil. I enjoy creating visually pleasing and accessible web applications.</p>
+          <p class="p">In 2019 I got a master's degree in Computer Science (on the HCI field) from <a class="a" href="http://www.ppgccs.net/" target="_blank">Federal University of São Carlos (UFSCar Sorocaba)</a>. I developed <strong>an approach called <a href="https://repositorio.ufscar.br/handle/ufscar/11311" class="a" target="_blank">PWA-EU</a> that assists developers to create PWAs that empower end-users</strong>. This was when I learned that besides front-end, I'm also eager to learn and practice end-user research. To learn more about <strong>PWA-EU</strong>, check my <a class="a" href="https://scholar.google.com.br/citations?user=y16Jo-EAAAAJ" target="_blank">publications</a>. On October 2021, I finished a UX Design course on <a href="https://www.mergo.com.br/" class="a" target="_blank">Mergo UX</a>.</p>
+          <p class="p">I'm a <strong>CSS and Women in Tech enthusiast</strong>. I co-organize/speak/attend events in those fields, such as <a class="a" href="http://railsgirls.com/sorocaba" target="_blank">Rails Girls Sorocaba</a>. I believe the people who are already working with technology (yes, that includes me and maybe you) <strong>should share their experiences and knowledge to create a more welcoming place to those who are starting</strong>, as the technology field has its challenges.</p>
           <p class="p"><a class="a" href="assets/resume-giuliacardieri.pdf" target="_blank">Download my resume to learn more about my experience and education.</a></p>
         </div>
       </main>
