--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   "description": "Front-end Developer",
   "jobTitle": "Front-end Developer and UX Researcher",
   "url": "https://giuliacardieri.com",
-  "image": "https://giuliacardieri.com/images/giuliaa.jpg",
+  "image": "https://giuliacardieri.com/images/giulia.jpg",
   "address": {
     "@type": "PostalAddress",
     "addressLocality": "Sorocaba",
@@ -69,7 +69,7 @@
     <section class="section">
       <main class="section__content section__content--hero">
         <section class="section__svg-wrapper">
-          <figure class="section__svg">  
+          <figure class="section__svg">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 155.7 176.9">
                 <linearGradient id="brown" gradientUnits="userSpaceOnUse" x1="58.0506" y1="80.3482" x2="58.0506" y2="36.8212" gradientTransform="matrix(1 0 0 -1 0 178.0107)">
                   <stop offset="0" stop-color="#332c28"/>
@@ -103,10 +103,10 @@
     </section>
     <section class="section section--tall section--white">
       <main class="section__content section__content--flex">
-        <img class="image" src="images/giuliaa.jpg" alt="Giulia Cardieri">
+        <img class="image" src="images/giulia.jpg" alt="Giulia Cardieri">
         <div>
           <h3 class="h3">Hi!</h3>
-          <p class="p">I'm <strong>Giulia Cardieri</strong>, a <strong>front-end developer</strong> located in Sorocaba, Brazil. I enjoy creating visually pleasing and accessible web applications.</p>
+          <p class="p">I'm <strong>Giulia Cardieri</strong>, a <strong>front-end developer</strong> located in Sorocaba, Brazil. I enjoy creating visually pleasing and accessible web applications. I have over four years of experience working with technologies such as JavaScript, CSS, Vue.js and HTML. I've been working with north american companies since 2018.</p>
           <p class="p">In 2019 I got a master's degree in Computer Science (on the HCI field) from <a class="a" href="http://www.ppgccs.net/" target="_blank">Federal University of São Carlos (UFSCar Sorocaba)</a>. I developed <strong>an approach called <a href="https://repositorio.ufscar.br/handle/ufscar/11311" class="a" target="_blank">PWA-EU</a> that assists developers to create PWAs that empower end-users</strong>. This was when I learned that besides front-end, I'm also eager to learn and practice end-user research. To learn more about <strong>PWA-EU</strong>, check my <a class="a" href="https://scholar.google.com.br/citations?user=y16Jo-EAAAAJ" target="_blank">publications</a>. On October 2021, I finished a UX Design course on <a href="https://www.mergo.com.br/" class="a" target="_blank">Mergo UX</a>.</p>
           <p class="p">I'm a <strong>CSS and Women in Tech enthusiast</strong>. I co-organize/speak/attend events in those fields, such as <a class="a" href="http://railsgirls.com/sorocaba" target="_blank">Rails Girls Sorocaba</a>. I believe the people who are already working with technology (yes, that includes me and maybe you) <strong>should share their experiences and knowledge to create a more welcoming place to those who are starting</strong>, as the technology field has its challenges.</p>
           <p class="p"><a class="a" href="assets/resume-giuliacardieri.pdf" target="_blank">Download my resume to learn more about my experience and education.</a></p>
@@ -117,25 +117,88 @@
       <main class="section__content">
         <h2 class="h2 h2--white">Work Highlights</h2>
         <section class="cards">
-          <a href="https://dev.to/giuliacardieri" target="_blank" class="card">
+          <a href="https://codepen.io/giuliacardieri/pen/LYmgBrX" target="_blank" class="card">
             <div class="card__inner">
               <div class="card__drawing">
-                <div class="article__container">
-                  <div class="paper">
-                    <div class="paper__reaction r1"></div>
-                    <div class="paper__reaction r2"></div>
-                    <div class="paper__reaction r3"></div>
-                    <p class="paper__p">CSS</p>
-                    <p class="paper__p">is</p>
-                    <p class="paper__p">fun!</p>
-                    <div class="paper__reaction r4"></div>
-                    <div class="paper__reaction r5"></div>
-                    <div class="paper__reaction r6"></div>
+                <div class="card__container">
+                  <div class="flower">
+                    <div class="circle"></div>
+                    <div class="petal" style="--i: 0"></div>
+                    <div class="petal" style="--i: 1"></div>
+                    <div class="petal" style="--i: 2"></div>
+                    <div class="petal" style="--i: 3"></div>
+                    <div class="petal" style="--i: 4"></div>
+                    <div class="petal" style="--i: 5"></div>
+                    <div class="petal" style="--i: 6"></div>
+                    <div class="petal" style="--i: 7"></div>
+                    <div class="petal" style="--i: 8"></div>
+                    <div class="inner-petal" style="--j: 0"></div>
+                    <div class="inner-petal" style="--j: 1"></div>
+                    <div class="inner-petal" style="--j: 2"></div>
+                    <div class="inner-petal" style="--j: 3"></div>
+                    <div class="inner-petal" style="--j: 4"></div>
+                    <div class="inner-petal" style="--j: 5"></div>
+                    <div class="inner-petal" style="--j: 6"></div>
+                    <div class="inner-petal" style="--j: 7"></div>
+                    <div class="inner-petal" style="--j: 8"></div>
                   </div>
                 </div>
               </div>
-              <h3>CSS Technical Articles (in Portuguese)</h3>
-              <p>After getting into this point in my portfolio, I hope you already noticed that I'm a huge CSS fan! One of my goals is to share why I love CSS and hopefully help other people to feel the same. Based on that, I enjoy writing articles about CSS. Initially, I'm writing in Portuguese because there is a lack of creative CSS content accessible to Brazilian developers who don't speak English.</p>
+              <h3>Flower Maker - a pure CSS interactive page</h3>
+              <p>This is an experiment with CSS and HTML in which you can customize your own CSS flower. I wanted to explore custom properties inheritance and default values, besides testing the new <em>:has</em> selector. <strong>This is not accessible and works only for modern browsers due to how new the <em>:has</em> selector is.</strong> I do hope you like colors and flowers, if you don't, this might not be the right experiment for you.</p>
+            </div>
+          </a>
+          <a href="https://github.com/giuliacardieri/lola" target="_blank" class="card">
+            <div class="card__inner">
+              <div class="card__drawing">
+                <div class="lola__container card__container">
+                  <svg width="69" height="68" viewBox="0 0 69 68" fill="none" xmlns="http://www.w3.org/2000/svg" class="lola">
+                    <path d="M55.1261 6.75917C48.3103 1.9559 38.8507 4.9547 34.9728 7.05452C33.3481 5.37517 29.2643 1.8584 25.9273 1.22605C22.5903 0.593688 19.4463 1.43696 18.2914 1.93765C23.7301 2.64955 29.5342 6.34261 25.3315 5.7925C21.9694 5.35242 18.6519 7.52558 17.4134 8.66717C12.8647 8.07176 8.79797 9.82091 7.33318 10.7699C6.08667 10.6882 4.47733 10.6894 8.01211 11.3477C11.5469 12.0059 13.294 13.2613 13.7257 13.8067C11.4031 16.1915 10.7555 15.3734 4.59201 22.1444C-0.338798 27.5612 0.857881 41.1297 2.07257 47.2369L4.40611 38.9868C3.73671 49.8992 7.77162 57.5162 8.36375 54.9048C8.83746 52.8157 9.90264 42.0586 9.90264 40.5098C9.90264 38.1364 9.81665 37.0367 10.1988 37.3947C10.8979 37.3947 9.81665 41.1032 9.81665 45.4051C9.69335 47.2564 9.45473 52.6667 10.495 54.7507C11.2355 56.2341 12.4067 60.3634 13.0059 57.3129C13.605 54.2625 13.7261 52.3475 14.3041 51.7713C13.1589 55.9236 17.1737 59.9691 19.3242 61.4728C18.0904 60.138 18.1734 58.1972 18.3443 57.2158C18.5838 55.8403 18.8658 55.3506 20.5676 57.7245C22.2694 60.0983 28.7276 63.2741 31.7439 64.5652L44.9512 59.694C45.8117 62.3488 46.1892 64.3375 46.2704 65C47.733 63.0403 48.54 57.8823 48.7607 55.5482C49.6994 56.0622 49.4115 60.1963 49.1502 62.1992C50.9563 60.7434 54.7737 56.3733 56.0968 49.5587C56.9143 45.3478 55.6489 37.8714 56.4359 37.0367C57.8866 37.0367 55.5159 48.158 56.8499 51.7713C58.0143 54.9249 53.1722 62.8925 55.0281 62.1577C56.5128 61.5698 58.0634 58.8069 58.6531 57.4989C59.642 57.6283 59.6383 59.5834 59.5129 60.5447C62.2595 59.5354 63.4133 51.8479 63.6469 48.1303L66.3867 54.1112C69.3812 52.7431 67.5308 42.772 66.2313 37.9575C65.9541 20.8101 63.2514 25.4227 62.921 20.2462C62.6567 16.1049 58.2614 16.1325 56.0968 16.664C57.3924 11.3581 50.9592 9.14708 47.5807 8.70484C48.7451 7.48837 53.0961 6.90087 55.1261 6.75917Z" fill="#FDFAF2" stroke="#591630" stroke-width="2"/>
+                    <ellipse cx="22.2966" cy="28.9973" rx="3.79147" ry="4.52526" fill="#591630"/>
+                    <path d="M22.4462 31.461C25.1209 33.4516 28.887 33.0277 31.6732 32.5669C32.8991 32.1983 37.0487 31.6822 41.5958 32.5669C46.1429 33.4516 48.178 31.8297 50.6298 31.461C49.5599 33.4516 46.6768 35.2394 44.1135 35.3316C49.1955 35.9951 52.8468 43.5418 54.1842 45.1085C52.3119 44.0026 46.7882 40.6767 44.1135 40.861C47.5907 40.861 49.6283 47.3425 50.1855 48.817C48.8482 47.0476 44.2676 43.7178 42.4844 44.4551C45.9616 45.1186 46.0769 50.442 45.7426 52.3773C45.7426 51.0502 41.8382 46.8511 37.826 45.561C35.7085 45.561 32.704 45.7417 31.2289 45.1085C28.1188 43.7734 20.1215 52.3773 17.7519 52.9706C16.3658 53.3177 22.2988 46.3987 24.4164 45.1085C21.4544 45.561 16.5394 48.6934 14.7563 49.7071C15.0238 48.6012 19.66 42.6119 22.4462 40.861C22.4462 39.9763 17.7519 42.4383 14.0494 46.2952C14.7563 41.5483 22.1118 36.161 24.7866 35.3316C21.5769 34.6681 21.8889 32.4747 22.4462 31.461Z" fill="#FDFAF2"/>
+                    <ellipse cx="44.4559" cy="28.4324" rx="3.74676" ry="4.25138" fill="#591630"/>
+                    <path d="M40.6026 38.4774C38.7805 36.1609 33.3753 36.8973 31.8206 37.5662C27.601 38.8094 28.6779 43.0227 30.5211 45.0873C31.1945 45.8416 36.1233 47.0135 38.2862 45.8295C40.9145 44.3908 42.4246 40.7939 40.6026 38.4774Z" fill="#591630"/>
+                    <path d="M33.4743 42.3462C33.7326 42.9485 33.5504 43.6053 33.0674 43.8131C32.5844 44.0209 31.9835 43.7011 31.7252 43.0987C31.4669 42.4964 31.6491 41.8396 32.1321 41.6318C32.6151 41.424 33.216 41.7439 33.4743 42.3462Z" fill="#2c0b17"/>
+                    <path d="M33.4743 42.3462C33.7326 42.9485 33.5504 43.6053 33.0674 43.8131C32.5844 44.0209 31.9835 43.7011 31.7252 43.0987C31.4669 42.4964 31.6491 41.8396 32.1321 41.6318C32.6151 41.424 33.216 41.7439 33.4743 42.3462Z" fill="#2c0b17"/>
+                    <path d="M33.4743 42.3462C33.7326 42.9485 33.5504 43.6053 33.0674 43.8131C32.5844 44.0209 31.9835 43.7011 31.7252 43.0987C31.4669 42.4964 31.6491 41.8396 32.1321 41.6318C32.6151 41.424 33.216 41.7439 33.4743 42.3462Z" fill="#2c0b17"/>
+                    <path d="M38.7931 41.8724C39.0514 42.4748 38.8693 43.1315 38.3863 43.3393C37.9033 43.5471 37.3023 43.2273 37.044 42.6249C36.7857 42.0226 36.9679 41.3658 37.4509 41.158C37.9339 40.9502 38.5348 41.2701 38.7931 41.8724Z" fill="#2c0b17"/>
+                    <path d="M38.7931 41.8724C39.0514 42.4748 38.8693 43.1315 38.3863 43.3393C37.9033 43.5471 37.3023 43.2273 37.044 42.6249C36.7857 42.0226 36.9679 41.3658 37.4509 41.158C37.9339 40.9502 38.5348 41.2701 38.7931 41.8724Z" fill="#2c0b17"/>
+                    <path d="M38.7931 41.8724C39.0514 42.4748 38.8693 43.1315 38.3863 43.3393C37.9033 43.5471 37.3023 43.2273 37.044 42.6249C36.7857 42.0226 36.9679 41.3658 37.4509 41.158C37.9339 40.9502 38.5348 41.2701 38.7931 41.8724Z" fill="#2c0b17"/>
+                    <path d="M29.4517 49.7767C31.6153 51.0663 35.7879 53.0353 41.3899 49.9874" stroke="#591630" stroke-width="2"/>
+                    </svg>
+                </div>
+              </div>
+              <h3>Lola - UI Components Library (in progress!)</h3>
+              <p>Lola was my dog who passed away in 2021 after 16 years being my friend. The goal of this library is to create UI components such as buttons, accordions, cards, form controls and others that are ready to use and are accessible. I added Storybook as a way to document and test each component individually. My plan is to use these components as a base on future Vue.js projects.</p>
+            </div>
+          </a>
+          <a href="https://romantic-visvesvaraya-5dcba9.netlify.app/" target="_blank" class="card">
+            <div class="card__inner">
+              <div class="card__drawing">
+                <div class="card__container casamento__container">
+                <div class="lights">
+                  <div class="light light--1"></div>
+                  <div class="light light--2"></div>
+                  <div class="light light--3"></div>
+                  <div class="light light--4"></div>
+                  <div class="light light--5"></div>
+                  <div class="light light--6"></div>
+                  <div class="light light--7"></div>
+                  <div class="light light--8"></div>
+                  <div class="light light--9"></div>
+                  <div class="light light--10"></div>
+                  <div class="light light--11"></div>
+                  <div class="light light--12"></div>
+                  <div class="light light--13"></div>
+                  <div class="light light--14"></div>
+                  <div class="light light--15"></div>
+                  <div class="light light--16"></div>
+                </div>
+                  <span class="casamento__heading">Giulia & Gabriel</span>
+                </div>
+              </div>
+              <h3>My wedding website</h3>
+              <p>Well, this was my wedding website created with Vue.js components and plain CSS. I designed everything and decided to make something simple that would match the cerimony's and party's decorations.</p>
             </div>
           </a>
           <a href="https://dinokiki.com" target="_blank" class="card">
@@ -168,7 +231,7 @@
           <a href="https://codepen.io/collection/DqVrVa" target="_blank" class="card">
             <div class="card__inner">
               <div class="card__drawing">
-                <div class="game__container">
+                <div class="card__container">
                   <div class="game">
                     <div class="base base--left"></div>
                     <div class="base base--right"></div>
@@ -188,7 +251,7 @@
           <a href="https://codepen.io/collection/XyJVEV" target="_blank" class="card">
             <div class="card__inner">
               <div class="card__drawing">
-                <div class="css__container">
+                <div class="card__container">
                   <div class="c">
                   </div>
                   <div class="s">
@@ -207,6 +270,27 @@
               </div>
               <h3>A collection of pure CSS drawings</h3>
               <p>Drawing is an amazing skill that I, unfortunately, don't have on paper, but I do have with CSS! Anyway, drawing with CSS is fun but it's also a lot more than that. I learned a lot of new things by drawing with CSS. Similar to games, we can explore how to use CSS in a different perspective and how to use it better in work environments.</p>
+            </div>
+          </a>
+          <a href="https://dev.to/giuliacardieri" target="_blank" class="card">
+            <div class="card__inner">
+              <div class="card__drawing">
+                <div class="card__container article__container">
+                  <div class="paper">
+                    <div class="paper__reaction r1"></div>
+                    <div class="paper__reaction r2"></div>
+                    <div class="paper__reaction r3"></div>
+                    <p class="paper__p">CSS</p>
+                    <p class="paper__p">is</p>
+                    <p class="paper__p">fun!</p>
+                    <div class="paper__reaction r4"></div>
+                    <div class="paper__reaction r5"></div>
+                    <div class="paper__reaction r6"></div>
+                  </div>
+                </div>
+              </div>
+              <h3>CSS Technical Articles (in Portuguese)</h3>
+              <p>After getting into this point in my portfolio, I hope you already noticed that I'm a huge CSS fan! One of my goals is to share why I love CSS and hopefully help other people to feel the same. Based on that, I enjoy writing articles about CSS. Initially, I'm writing in Portuguese because there is a lack of creative CSS content accessible to Brazilian developers who don't speak English.</p>
             </div>
           </a>
         </section>
